# viya-airtrain

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
viya_airtrain/: core_prompt_paraphrasing.py  data_transforms.py  names.py  task_prompts.py  typed_dicts.py
viya_airtrain/scripts/: prepare_jsonl.py
